webextensions/sidebar/styles/square/highcontrast.css
@import url("base.css");
@import url("border.css");

:root {
  --tab-surface: ButtonFace;
  --tab-text: ButtonText;
  --tab-text-inverted: ThreeDHighlight;
  --tab-border: ThreeDHighlight;
  --tab-dropmarker: ButtonText;
}


/* Tab Bar */

:root {
  background: ButtonFace;
}

#extra-background {
  background: ButtonText;
  opacity: 0.35;
}


/* Tab */

.tab,
.after-tabs button {
  background: var(--tab-surface);
  color: var(--tab-text);
}

.tab * {
  color: var(--tab-text);
}

.tab:not(.collapsed):hover,
.after-tabs button:hover {
  opacity: 0.7;
  /*mix-blend-mode: multiply;*/
}

.tab.active {
  --tab-surface: Highlight;
  --throbber-color: HighlightText;
  --tab-border: Highlight;
  --tab-text: HighlightText;
  --tab-text-inverted: Highligh;
}

.tab:not(.active) {
  --throbber-color: Highlight;
}

.tab.active .twisty,
.tab.active .label,
.tab.active .counter,
.tab.active .closebox {
  --tab-text: HighlightText;
}

.newtab-button-box {
  border-style: solid;
  border-width: 1px;
}


/* Closebox */

.tab .closebox {
  margin-top: -10px;
  padding: 3px;
}

.tab .closebox:hover {
  /*color: Highlight;*/
  --tab-text: HighlightText;
  background: Highlight;
  opacity: 0.75;
}

.tab.active .closebox:hover {
  --tab-text: Highlight;
  background: HighlightText;
  opacity: 0.5;
}

/* Mac OS workaround */

:root.left.overlay-scrollbar #tabbar.overflow .tab:not(.pinned) {
  padding-left: var(--scrollbar-placeholder-size); /* it will be enough larger than the default padding */
}
:root.right.overlay-scrollbar #tabbar.overflow .tab:not(.pinned) {
  padding-right: var(--scrollbar-placeholder-size); /* it will be enough larger than the default padding */
}

